--- a/source/Dockerfile
+++ b/source/Dockerfile
@@ -12,6 +12,6 @@ RUN pip3 install pandas
 
 COPY ./source /opt/source-code
 RUN chmod u+x /opt/source-code/examples-for-explaining-approach/run.bash
-RUN rm Dockerfile
+RUN rm /opt/source-code/Dockerfile
 
 ENTRYPOINT cd /opt/source-code ; cat readme ; bash
